# Bacter

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  Bacter.sln  Cargo.toml  README.md  bacter.md  index.html  package-lock.json  readme.md  settings.json
Bacter/: Bacter.cpp  Bacter.h  Bacter.vcxproj  Bacter.vcxproj.filters  Grid.cpp  Grid.h  Main.cpp
assets/: sw.js
bacter/: cargo.toml
bacter-bin/: cargo.toml
bacter-bin/src/: main.rs
bacter-wasm/: cargo.toml  index.html  script.js
bacter-wasm/src/: lib.rs
bacter-wasm/web/: bacter_wasm.d.ts  bacter_wasm.js  bacter_wasm_bg.wasm  bacter_wasm_bg.wasm.d.ts  package.json
bacter/src/: lib.rs  petri.rs
bacter/src/cell/: cell.rs  dish.rs
bacter/src/collision_grid/: collision_grid.rs
proto/: bacter.pb.go  bacter.proto  bacter_grpc.pb.go  go.mod
src/: app.rs  data_visualization.rs  lib.rs  main.rs  petri.rs
src/app/: data_visualization.rs
src/cell/: cell.rs  dish.rs  mod.rs
src/collision_grid/: mod.rs
wasm-builder/: cargo.toml
wasm-builder/src/: main.rs
www/: index.html  index.js  index.old.js  package-lock.json  package.json
