[package]
name = "bacter_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
wasm-bindgen = "0.2.63"
getrandom = { version = "0.2", features = ["js"] } #required to be explicit for wasm-bindgen to compile.

[lib]
crate-type = ["cdylib"]