[package]
name = "bacter_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Bindgen for wasm
wasm-bindgen = "0.2.63"

# Random (probably better solutions out there.)
rand = "0.8.4"
getrandom = { version = "0.2", features = ["js"] } #required to be explicit for wasm-bindgen to compile.

# EGUI + EFRAME graphical interface
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence

# EGUI native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# EGUI web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"

#[lib]
# TODO TBR? Still necessary?
#crate-type = ["cdylib"]

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]
