[package]
name = "bacter_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.4"
wasm-bindgen = "0.2.63"
getrandom = { version = "0.2", features = ["js"] } #required to be explicit for wasm-bindgen to compile.

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "bin"
path = "src/main.rs"
